crates/gitat-core/src/snapshots/gitat_core__branch__tests__snapshot_branches_with_current.snap
---
source: crates/gitat-core/src/branch.rs
assertion_line: 89
expression: result
---
[
    BranchInfo {
        name: "main",
        is_current: true,
        upstream: None,
        short_hash: "",
        last_commit: "     abc1234 latest commit message",
    },
    BranchInfo {
        name: "feature",
        is_current: false,
        upstream: None,
        short_hash: "",
        last_commit: "  def5678 wip: add feature",
    },
    BranchInfo {
        name: "bugfix",
        is_current: false,
        upstream: None,
        short_hash: "",
        last_commit: "   ghi9012 fix: resolve crash",
    },
]
