crates/gitat-core/src/snapshots/gitat_core__branch__tests__snapshot_branches_with_symbolic_ref.snap
---
source: crates/gitat-core/src/branch.rs
assertion_line: 100
expression: result
---
[
    BranchInfo {
        name: "main",
        is_current: true,
        upstream: None,
        short_hash: "",
        last_commit: "         abc1234 latest commit",
    },
    BranchInfo {
        name: "feature",
        is_current: false,
        upstream: None,
        short_hash: "",
        last_commit: "      def5678 wip feature",
    },
]
